--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,15 @@ dependencies {
 intellij {
     version '2020.2.1'
 }
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
