--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    testImplementation "org.assertj:assertj-core:3.17.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
 }
 
 intellij {
@@ -32,4 +36,8 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+}
+
+test {
+    useJUnitPlatform()
 }
