docs: add detailed readme and plugin description

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,8 +4,17 @@
     <vendor email="contact@alexey-anufriev.com" url="https://alexey-anufriev.com">Alexey Anufriev</vendor>
 
     <description><![CDATA[
-    Plugin for handy scopes management of the project resources.
-    Any file or folder can be assigned to a scope (or unassigned) right from the tree view.
+        <h1>Scopes Manager</h1>
+        <br/>
+
+        <a href="https://github.com/alexey-anufriev/scopes-manager-intellij-plugin">GitHub</a> |
+        <a href="https://github.com/alexey-anufriev/scopes-manager-intellij-plugin/issues">Issues</a>
+        <br/>
+        <br/>
+
+        Scopes bring more structure and easier navigation across the project tree.
+        Scopes Manager Plugin is important for handy scopes management of the project resources.
+        Any file or folder can be assigned to a scope (or unassigned) right from the tree view.
     ]]></description>
 
     <depends>com.intellij.modules.platform</depends>
