docs: minor improvement of the plugin description

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
         <br/>
 
         Scopes bring more structure and easier navigation across the project tree.
-        Scopes Manager Plugin is important for handy scopes management of the project resources.
+        Scopes Manager Plugin is important for handy scopes management and related project resources.
         Any file or folder can be assigned to a scope (or unassigned) right from the tree view.
         <br/>
         <br/>
