--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -69,9 +69,16 @@
     </actions>
 
     <change-notes><![CDATA[
+        1.5.0: Support IntelliJ build 212.*.
+        <br/>
+        Fixed menu items visibility rules.
+        <br/>
+        <br/>
         1.4.0: Support IntelliJ build 211.*.
         <br/>
+        <br/>
         1.3.0: Support IntelliJ build 203.*.
+        <br/>
         <br/>
         1.2.0: "Clear Scope" menu was added to be able to clear the scope content.
         <br/>
