--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,47 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.7.2'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+    id 'org.jetbrains.intellij' version '1.2.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
 }
 
 group 'com.alexey-anufriev'
-version '1.5.0'
+version '1.6.0'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.32"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
-    testImplementation "org.assertj:assertj-core:3.19.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
+    testImplementation "org.assertj:assertj-core:3.21.0"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.1"
 }
 
 intellij {
-    version '2021.1'
+    version.set('2021.2.2')
 }
 
 patchPluginXml {
-    version project.version
-    sinceBuild '201.7223'
-    untilBuild '212.*'
+    version.set(project.version)
+    sinceBuild.set('201.7223')
+    untilBuild.set('213.*')
 }
 
 compileKotlin {
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 }
 
 compileTestKotlin {
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 }
 
