--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -69,6 +69,9 @@
     </actions>
 
     <change-notes><![CDATA[
+        1.6.0: Support IntelliJ build 213.*.
+        <br/>
+        <br/>
         1.5.0: Support IntelliJ build 212.*.
         <br/>
         Fixed menu items visibility rules.
