--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -69,6 +69,9 @@
     </actions>
 
     <change-notes><![CDATA[
+        1.6.2: Set minimal IntelliJ build to 221.*.
+        <br/>
+        <br/>
         1.6.1: Set minimal IntelliJ build to 203.*.
         <br/>
         <br/>
