--- a/.github/workflows/release-master.yml
+++ b/.github/workflows/release-master.yml
@@ -66,7 +66,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
+        tag_name: v${{ steps.properties.outputs.version }}
         release_name: v${{ steps.properties.outputs.version }}
         draft: false
         prerelease: false
