--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,37 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '1.5.3'
-    id 'org.jetbrains.kotlin.jvm' version '1.6.21'
+    id 'org.jetbrains.intellij' version '1.10.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
 }
 
 group 'com.alexey-anufriev'
-version '1.7.1'
-
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+version '1.8.0'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.21'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.6.21'
-    testImplementation 'org.assertj:assertj-core:3.22.0'
-    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.22'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.7.22'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 intellij {
-    version.set('2022.1')
+    version.set('2022.3')
 }
 
 patchPluginXml {
     version.set(project.version)
-    sinceBuild.set('203.*')
-    untilBuild.set('222.*')
+    sinceBuild.set('222.*')
+    untilBuild.set('223.*')
 }
 
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = '11'
-    }
-}
-
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = '11'
-    }
+kotlin {
+    jvmToolchain(17)
 }
 
 test {
