--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,39 +36,48 @@
         <action id="com.alexey-anufriev.scopes-manager.PreSeparator"
                 class="com.intellij.openapi.actionSystem.Separator">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last" />
+            <add-to-group group-id="SolutionExplorerPopupMenu" anchor="last"/>
         </action>
 
         <group id="com.alexey-anufriev.scopes-manager.AddToScopeActionGroup"
                text="Add to Scope" icon="AllIcons.General.Add" popup="true"
                class="com.alexey_anufriev.scopes_manager.actions.add.AddToScopeActionsGroup">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last" />
+            <add-to-group group-id="SolutionExplorerPopupMenu" anchor="last"/>
         </group>
 
         <group id="com.alexey-anufriev.scopes-manager.RemoveFromScopeActionGroup"
                text="Remove from Scope" icon="AllIcons.General.Remove" popup="true"
                class="com.alexey_anufriev.scopes_manager.actions.remove.RemoveFromScopeActionsGroup">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last" />
+            <add-to-group group-id="SolutionExplorerPopupMenu" anchor="last"/>
         </group>
 
         <group id="com.alexey-anufriev.scopes-manager.ClearScopeActionGroup"
                text="Clear Scope" icon="AllIcons.Actions.Lightning" popup="true"
                class="com.alexey_anufriev.scopes_manager.actions.clear.ClearScopeActionGroup">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last" />
+            <add-to-group group-id="SolutionExplorerPopupMenu" anchor="last"/>
         </group>
 
         <group id="com.alexey-anufriev.scopes-manager.SettingsActionGroup"
                text="Scopes Settings" icon="AllIcons.General.Settings" popup="true"
                class="com.alexey_anufriev.scopes_manager.actions.settings.ScopeSettingsActionsGroup">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last" />
+            <add-to-group group-id="SolutionExplorerPopupMenu" anchor="last"/>
         </group>
 
         <action id="com.alexey-anufriev.scopes-manager.PostSeparator"
                 class="com.intellij.openapi.actionSystem.Separator">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last" />
+            <add-to-group group-id="SolutionExplorerPopupMenu" anchor="last"/>
         </action>
     </actions>
 
     <change-notes><![CDATA[
+        1.9.0: Add support for Rider IDE.
+        <br/>
+        <br/>
         1.8.0: Increased minimal compatible IntelliJ build to 223.* (Platform 2022.3).
         <br/>
         <br/>
