--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '1.10.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
+    id 'org.jetbrains.intellij' version '1.13.1'
+    id 'org.jetbrains.kotlin.jvm' version '1.8.10'
 }
 
 group 'com.alexey-anufriev'
-version '1.9.1'
+version '1.9.2'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.22'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.7.22'
-    testImplementation 'org.assertj:assertj-core:3.23.1'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.10'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.8.10'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
 
 intellij {
@@ -25,9 +25,9 @@ intellij {
 }
 
 patchPluginXml {
-    version.set(project.version)
+    version.set(project.version as String)
     sinceBuild.set('222')
-    untilBuild.set('223.*')
+    untilBuild.set('224.*')
 }
 
 kotlin {
