--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -70,6 +70,9 @@
     </actions>
 
     <change-notes><![CDATA[
+        1.9.4: Set max compatible IntelliJ build to 232.*.
+        <br/>
+        <br/>
         1.9.3: Set max compatible IntelliJ build to 231.*.
         <br/>
         <br/>
