--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -70,6 +70,11 @@
     </actions>
 
     <change-notes><![CDATA[
+        1.9.6: Set max compatible IntelliJ build to 241.*.
+        <br/>
+        Support new Rider.
+        <br/>
+        <br/>
         1.9.5: Set max compatible IntelliJ build to 233.*.
         <br/>
         <br/>
