feat: support save/restore of project view

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -74,6 +74,8 @@
         <br/>
         Support new Rider.
         <br/>
+        Support Project View save/restore (stay on selected in the project tree scope).
+        <br/>
         <br/>
         1.9.5: Set max compatible IntelliJ build to 233.*.
         <br/>
