--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -35,7 +35,7 @@ jobs:
       id: properties
       shell: bash
       run: |
-        echo "::set-output name=pluginVerifierHomeDir::~/.pluginVerifier"
+        echo "{pluginVerifierHomeDir}={/.pluginVerifier}" >> $GITHUB_OUTPUT
         ./gradlew listProductsReleases
 
     - name: Run Tests
@@ -56,7 +56,7 @@ jobs:
       run: |
         cd ${{ github.workspace }}/build/distributions
         FILENAME=`ls *.zip`
-        echo "::set-output name=filename::${FILENAME:0:-4}"
+        echo "{filename}={${FILENAME:0:-4}}" >> $GITHUB_OUTPUT
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
