--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -10,13 +10,13 @@ jobs:
 
     steps:
     - name: Free Disk Space
-      uses: jlumbroso/free-disk-space@main
+      uses: jlumbroso/free-disk-space@v1
 
     - name: Fetch Sources
       uses: actions/checkout@v3
 
     - name: Gradle Wrapper Validation
-      uses: gradle/wrapper-validation-action@v1.0.5
+      uses: gradle/wrapper-validation-action@v2
 
     - name: Setup Java
       uses: actions/setup-java@v3
@@ -25,35 +25,8 @@ jobs:
         java-version: 17
         cache: gradle
 
-    - name: Export Properties
-      id: properties
-      shell: bash
-      run: |
-        echo "{pluginVerifierHomeDir}={/.pluginVerifier}" >> $GITHUB_OUTPUT
-        ./gradlew listProductsReleases
-
     - name: Run Tests
       run: ./gradlew test
 
-    - name: Setup Plugin Verifier IDEs Cache
-      uses: actions/cache@v3
-      with:
-        path: ${{ steps.properties.outputs.pluginVerifierHomeDir }}/ides
-        key: plugin-verifier-${{ hashFiles('build/listProductsReleases.txt') }}
-
     - name: Run Plugin Verification
-      run: ./gradlew runPluginVerifier -Pplugin.verifier.home.dir=${{ steps.properties.outputs.pluginVerifierHomeDir }}
-
-    - name: Prepare Plugin Artifact
-      id: artifact
-      shell: bash
-      run: |
-        cd ${{ github.workspace }}/build/distributions
-        FILENAME=`ls *.zip`
-        echo "{filename}={${FILENAME:0:-4}}" >> $GITHUB_OUTPUT
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ steps.artifact.outputs.filename }}
-        path: ./build/distributions/
+      run: ./gradlew runPluginVerifier -Pplugin.verifier.home.dir=~/.pluginVerifier
