--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -70,6 +70,9 @@
     </actions>
 
     <change-notes><![CDATA[
+        1.9.7: Support composed projects that include external sources.
+        <br/>
+        <br/>
         1.9.6: Set max compatible IntelliJ build to 241.*.
         <br/>
         Support new Rider.
