--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,12 @@ dependencies {
 }
 
 intellij {
-    version.set('2022.2')
+    version.set('2023.2')
 }
 
 patchPluginXml {
     version.set(project.version as String)
-    sinceBuild.set('222')
+    sinceBuild.set('232.*')
     untilBuild.set('241.*')
 }
 
