--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.alexey-anufriev'
-version '1.9.7'
+version '1.9.8'
 
 repositories {
     mavenCentral()
@@ -26,7 +26,7 @@ intellij {
 
 patchPluginXml {
     version.set(project.version as String)
-    sinceBuild.set('232.*')
+    sinceBuild.set('232')
     untilBuild.set('241.*')
 }
 
