--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -70,6 +70,9 @@
     </actions>
 
     <change-notes><![CDATA[
+        1.9.8: Internal refactoring.
+        <br/>
+        <br/>
         1.9.7: Support composed projects that include external sources.
         <br/>
         Minimal version is set to 2023.2.
