--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -70,6 +70,9 @@
     </actions>
 
     <change-notes><![CDATA[
+        1.10.0: Set max compatible IntelliJ build to 251.*.
+        <br/>
+        <br/>
         1.9.11: Set max compatible IntelliJ build to 243.*.
         <br/>
         <br/>
