--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Setup Java
       uses: actions/setup-java@v4.7.1
       with:
-        distribution: zulu
+        distribution: corretto
         java-version: 17
         cache: gradle
 
