chore: change java vendor

--- a/.github/workflows/release-master.yml
+++ b/.github/workflows/release-master.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup Java
       uses: actions/setup-java@v4.7.1
       with:
-        distribution: zulu
+        distribution: corretto
         java-version: 17
         cache: gradle
 
