chore: extend validation scope

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,15 @@ test {
 
 runPluginVerifier {
     ideVersions = [
-            "IC-2025.2.6"
+            "IC-2025.2.6",
+            "IIU-2025.3",
+//            "PS-2025.3",
+//            "WS-2025.3",
+//            "CL-2025.3",
+//            "RD-2025.3",
+//            "PC-2025.3",
+//            "GO-2025.3",
+//            "RM-2025.3"
     ]
 }
 
